# 3d-animation

./: README.md
experiments/: curveOpt.py  geodesicSolver.py  graph.py  interpolation.py  latent_visualization.py  pathFinding.py  path_finding.py  testKNN.py  timer.py
experiments/AAE/: interpolation.py  latent_visualization.py  output_rimd.py  path_finding.py
experiments/AutoEncoder/: output_rimd.py
libigl-RIMD/: main.cpp  rimd.h
libigl-utils/ACAP/src/: ACAP.cpp  ACAP.h  MIQP.h  angleSolver.cpp  application.cpp  application.h  axisSolver.cpp  axisSolver.h  main.cpp  mesh.cpp  mesh.h  utils.h
meshRepresentation/: README.md
meshRepresentation/ACAP/: CMakeLists.txt  README.md
meshRepresentation/ACAP/cmake/: FindCPLEX.cmake
meshRepresentation/ACAP/src/: ACAP.cpp  ACAP.h  angleSolver.h  application.cpp  application.h  main.cpp  mesh.cpp  mesh.h
models/: models.py
pathExploration/: README.md  main.py  pathSolver.py
src/: datasets.py  models.py  train_AAE.py  train_AE.py  train_DAE.py  trainers.py
tools/: ACAP_utils.py  README.md  feature2rimd.py  generate_training_feature.py  rimd2feature.py  utils.py
training/: README.md  datasets.py  models.py  train.py  trainers.py
utils/: README.md  datasets.py  feature2rimd.py  rimd2feature.py  visualizer.py
